@@ -12,7 +12,8 @@
 
 <hr>                   FVWM Frequently Asked Questions
 <hr>
-Last updated 9 Oct 2000 for release 2.3.22
+Last updated March 18, 2001 for beta release 2.3.29 and official
+release 2.2.5.
 
 Contents
 
@@ -270,7 +271,7 @@ A: If your local FVWM maintainer can't help you, then the newsgroup
 
    Here's the list descriptions and instructions directly from Jason:
 
-   =================================================================
+   ------------------------------------------------------------------
    (fvwm)
 
    Description
@@ -315,7 +316,7 @@ A: If your local FVWM maintainer can't help you, then the newsgroup
 
    The current FVWM distribution is available for ftp at
    ftp://ftp.fvwm.org/pub/fvwm/
-   =================================================================
+   ------------------------------------------------------------------
 
 <hr>
 1.5  What are the differences between FVWM 1.xx and 2.xx?
@@ -561,7 +562,11 @@ A: RedHat Linux installs the X server accompanied (by default) by a
      itself, not just the border?
 
 A: Any version later than 2.0.46 (i.e. 2.1.0 or later) has this
-   feature:
+   feature.  In the 2.2.x series, use:
+
+     GlobalOpts MouseFocusClickRaises
+
+<b>With the latter 2.3.x betas and after use</b>:
 
      Style * MouseFocusClickRaises
 
@@ -744,8 +749,14 @@ A: Doubtful, although I'd like to see it too.  I believe that it'd be
      sticky windows.  Can I get those on other windows as well?
 
 A: Yes.  For release 2.3.14 and after,
-   put the line "Style * StippledTitle" in your .fvwm2rc.
-   For releases before then, use "GlobalOpts StipledTitles".
+   put the line
+
+     Style * StippledTitle
+
+   in your .fvwm2rc.  For earlier releases use
+
+     GlobalOpts StipledTitles
+
    (Yes the spelling was inconsistent.)
 
 <hr>
@@ -2118,9 +2129,10 @@ A: Setting the background image is not really part of the window
 
      AddToFunc ToggleFvwmConsole
      + I None (FvwmConsole) Module FvwmConsole
-     + I Next (FvwmConsole) Close
+     + I Next (CurrentPage Visible FvwmConsole) Close
      + I Next (FvwmConsole) MoveToDesk
      + I Next (FvwmConsole) MoveToPage
+     + I Next (FvwmConsole) Raise
 
      AddToMenu &lt;some menu&gt;
      + "toggle FvwmConsole" Function ToggleFvwmConsole
@@ -2129,8 +2141,9 @@ A: Setting the background image is not really part of the window
 
      *FvwmButtons(Action ToggleFvwmConsole)
 
-   The lines with MoveToDesk and MoveToPage will bring the window
-   to the current page if it is not visible instead of closing it.
+   The lines with MoveToDesk, MoveToPage and Raise will bring the
+   window to the top of the current page if it is not visible
+   instead of closing it.
 
    If you want to toggle one specific window, e.g. an xterm, but
    still want to have other xterms that are not toggled, you must
@@ -2180,7 +2193,7 @@ A: Setting the background image is not really part of the window
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Mon Feb 26 21:41:25 EST 2001 -->
+     on Sun Mar 18 18:11:56 EST 2001 -->
   </body>
 </html>
 
