@@ -1,3 +1,7 @@
+2001-03-18  Dan Espen  <dane@mk.telcordia.com>
+
+	* generated/FAQ.html: Regenerate FAQ.
+
 2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* download.html, index.html: News Flash, download 2.3.29.
